# COMP371_OpenGL_AntiAliasing

./: .gitignore  AntiAliasing.cpp  AntiAliasing.h  CMakeLists.txt  CMakeLists_OLD.txt  CMakePresets.json  Camera.cpp  Camera.h  IndexBuffer.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VArray.cpp  index.html  main.cpp  vcpkg.json
shaders/: Basic.shader  Basic_with_FXAA.shader  FXAA.frag  FXAA.fs  FXAA_2.fs  Screen.vs  Simple.frag  Simple.fs  Simple.vertex  Simple.vs
src/: AntiAliasing.cpp  AntiAliasing.h  Camera.cpp  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp
web/: index.html
web/images/: Thumbs.db  fxaa.jfif  msaa.jfif
web/styles/: styles.css
